--- a/trivia-angular/src/app/components/form/form.component.html
+++ b/trivia-angular/src/app/components/form/form.component.html
@@ -1,41 +1,56 @@
-<form  [formGroup]="form" (ngSubmit)="submit()">
-    <h2 class="form-signin-heading">API Helper</h2>
+<div class="general-div">
 
-    <label for="trivia_amount">Number of Questions:</label>
-    <input type="number" formControlName="trivia_amount" id="trivia_amount" class="form-control" min="5" max="20" value="10">
-
-    <br>
-
-    <label for="trivia_category">Select Category: </label>
-    <select formControlName="trivia_category" class="form-control">
-        <option [selected]="true" value="any">Any Category</option>
-        <option value="9">General Knowledge</option><option value="10">Entertainment: Books</option><option value="11">Entertainment: Film</option><option value="12">Entertainment: Music</option><option value="13">Entertainment: Musicals &amp; Theatres</option><option value="14">Entertainment: Television</option><option value="15">Entertainment: Video Games</option><option value="16">Entertainment: Board Games</option><option value="17">Science &amp; Nature</option><option value="18">Science: Computers</option><option value="19">Science: Mathematics</option><option value="20">Mythology</option><option value="21">Sports</option><option value="22">Geography</option><option value="23">History</option><option value="24">Politics</option><option value="25">Art</option><option value="26">Celebrities</option><option value="27">Animals</option><option value="28">Vehicles</option><option value="29">Entertainment: Comics</option><option value="30">Science: Gadgets</option><option value="31">Entertainment: Japanese Anime &amp; Manga</option><option value="32">Entertainment: Cartoon &amp; Animations</option>		</select>
-
-    <br>
-
-    <label for="trivia_difficulty">Select Difficulty: </label>
-    <select name="trivia_difficulty" formControlName="trivia_difficulty" class="form-control">
-        <option [selected] ="true" value="any">Any Difficulty</option>
-        <option value="easy">Easy</option>
-        <option value="medium">Medium</option>
-        <option value="hard">Hard</option>
-    </select>
-
-    <br>
-
-    <label for="type">Select Type: </label>
-    <select name="type" formControlName="trivia_type" class="form-control">>
-        <option [selected] ="true" value="any">Any Type</option>
-        <option value="multiple">Multiple Choice</option>
-        <option value="boolean">True / False</option>
-    </select>
-
-    <br>
-
-    
+    <h2 class="title">Angular Application with OPEN TRIVIA API</h2>
 
 
-    <br>
+    <div class="form">
+        <form  [formGroup]="form" (ngSubmit)="submit()">
 
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Launch game</button>
-</form>
+            <div class="wrapper">
+                <label for="trivia_amount">Number of Questions:</label>
+                <input type="number" formControlName="trivia_amount" id="trivia_amount" class="form-control" min="5" max="20" value="10">
+            </div>
+            <br>
+
+            <div class="wrapper">
+
+                <label for="trivia_category">Select Category: </label>
+                <select formControlName="trivia_category" class="form-control">
+                    <option [selected]="true" value="any">Any Category</option>
+                    <option value="9">General Knowledge</option><option value="10">Entertainment: Books</option><option value="11">Entertainment: Film</option><option value="12">Entertainment: Music</option><option value="13">Entertainment: Musicals &amp; Theatres</option><option value="14">Entertainment: Television</option><option value="15">Entertainment: Video Games</option><option value="16">Entertainment: Board Games</option><option value="17">Science &amp; Nature</option><option value="18">Science: Computers</option><option value="19">Science: Mathematics</option><option value="20">Mythology</option><option value="21">Sports</option><option value="22">Geography</option><option value="23">History</option><option value="24">Politics</option><option value="25">Art</option><option value="26">Celebrities</option><option value="27">Animals</option><option value="28">Vehicles</option><option value="29">Entertainment: Comics</option><option value="30">Science: Gadgets</option><option value="31">Entertainment: Japanese Anime &amp; Manga</option><option value="32">Entertainment: Cartoon &amp; Animations</option>		
+                </select>
+
+            </div>
+            <br>
+
+            <div class="wrapper">
+
+                <label for="trivia_difficulty">Select Difficulty: </label>
+                <select name="trivia_difficulty" formControlName="trivia_difficulty" class="form-control">
+                    <option [selected] ="true" value="any">Any Difficulty</option>
+                    <option value="easy">Easy</option>
+                    <option value="medium">Medium</option>
+                    <option value="hard">Hard</option>
+                </select>
+            </div>
+            <br>
+            <div class="wrapper">
+
+                <label for="type">Select Type: </label>
+                <select name="type" formControlName="trivia_type" class="form-control">>
+                    <option [selected] ="true" value="any">Any Type</option>
+                    <option value="multiple">Multiple Choice</option>
+                    <option value="boolean">True / False</option>
+                </select>
+            </div>
+            <br>
+
+            
+
+
+            <br>
+
+            <button class="btn-hover" type="submit">Launch QUIZZ</button>
+        </form>
+    </div>   
+</div>   
